# fondant

./: .gccp.ini  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  NOTICE  README.md  bitbucket-pipelines.yml  license_strategy.ini  mkdocs.yml  pipeline.tgz  pylint-modules  pylint.py  pyproject.toml  readthedocs.yaml  requirements.txt  run_license_check.sh  tox.ini
.github/workflows/: build.yaml  pipeline.yaml  prep-release.yaml  release.yaml
components/aggregate_eval_results/: Dockerfile  fondant_component.yaml
components/canny_edge_processor/: fondant_component.yaml  requirements.txt
components/caption_images/: Dockerfile  README.md  fondant_component.yaml  requirements.txt
components/chunk_text/: Dockerfile  README.md  fondant_component.yaml  requirements.txt
components/common_crawl_download/: Dockerfile  README.md  fondant_component.yaml  requirements.txt
components/controlnet_aux_processor/: Dockerfile  README.md  fondant_component.yaml  requirements.txt
components/crop_images/: README.md  fondant_component.yaml
components/depth_processor/: fondant_component.yaml
components/download_images/: Dockerfile  README.md  fondant_component.yaml  requirements.txt
components/embed_images/: Dockerfile  README.md  fondant_component.yaml  requirements.txt
components/embed_text/: Dockerfile  README.md  fondant_component.yaml  requirements.txt
components/embedding_based_laion_retrieval/: Dockerfile  README.md  fondant_component.yaml  requirements.txt
components/evaluate_ragas/: Dockerfile  README.md  fondant_component.yaml  requirements.txt
components/extract_image_resolution/: README.md  fondant_component.yaml
components/filter_comments/: Dockerfile  README.md  fondant_component.yaml  requirements.txt
components/filter_dataset/: fondant_component.yaml
components/filter_image_resolution/: Dockerfile  README.md  fondant_component.yaml  requirements.txt
components/filter_language/: Dockerfile  README.md  fondant_component.yaml  requirements.txt
components/filter_line_length/: Dockerfile  README.md  fondant_component.yaml  requirements.txt
components/filter_metadata/: README.md  fondant_component.yaml  run_locally.sh
components/filter_text_length/: README.md  fondant_component.yaml
components/generate_embeddings/: Dockerfile  README.md  fondant_component.yaml  requirements.txt
components/generate_minhash/: README.md  fondant_component.yaml
components/hed_processor/: fondant_component.yaml  requirements.txt
components/image_cropping/: Dockerfile  README.md  fondant_component.yaml  requirements.txt
components/image_embedding/: fondant_component.yaml  requirements.txt
components/image_resolution_extraction/: README.md  fondant_component.yaml  requirements.txt
components/image_resolution_filtering/: fondant_component.yaml  requirements.txt
components/index_aws_opensearch/: Dockerfile  README.md  fondant_component.yaml  requirements.txt
components/index_embeddings/: Dockerfile  README.md  fondant_component.yaml
components/index_qdrant/: README.md  fondant_component.yaml
components/index_weaviate/: Dockerfile  README.md  fondant_component.yaml  requirements.txt
components/language_filter/: Dockerfile  README.md  fondant_component.yaml  requirements.txt
components/load_from_csv/: Dockerfile  README.md  fondant_component.yaml  requirements.txt
components/load_from_files/: README.md  fondant_component.yaml  requirements.txt  test_requirements.txt
components/load_from_hf_hub/: Dockerfile  README.md  fondant_component.yaml  requirements.txt
components/load_from_parquet/: README.md  fondant_component.yaml
components/load_from_pdf/: Dockerfile  README.md  fondant_component.yaml  requirements.txt
components/load_with_llamahub/: Dockerfile  README.md  fondant_component.yaml  requirements.txt
data_explorer/: Dockerfile  README.md  build_image.sh  build_image_local.sh  docker-compose-isolated.yaml  docker-compose-pipeline.yml  requirements.txt  run_locally.sh
deployments/: Makefile  README.md  gcp.mk  local.mk
docs/: .readthedocs.yaml  README.md  about.md  architecture.md  caching.md  component_spec.md  components.md  contributing.md  custom_component.md  data_explorer.md  dataset.md  documentation_guide.md  faq.md  generic_component.md  getting_started.md  home.md  infrastructure.md  kubeflow_101.md  license.md  manifest.md  mkdocs.yml  partitions.md  pipeline.md  readthedocs.yaml
examples/: README.md  requirements.txt  sample_pipeline.py
express/: common.py  component_spec.py  data_source.py  dataset.py  exceptions.py  express_component.yaml  gcp_storage.py  import_utils.py  io.py  io_utils.py  kfp.py  kfp_utils.py  logger.py  manifest.py  manifest_example.json  parquet.py  pipeline.py  pipeline_test.py  pipeline_utils.py  schema.py  storage.py  storage_interface.py  storage_mount.py  taxonomy.py  utils.py
express/common/: Dockerfile  README.md  setup.cfg
fondant/: __init__.py  cli.py  compiler.py  component.py  component_spec.py  components  data_io.py  dataset.py  exceptions.py  explore.py  explorer.py  import_utils.py  logger.py  manifest.py  pipeline.py  pipeline_utils.py  run_explorer.sh  runner.py  schema.py  test.py
images/: Dockerfile
mlpipelines/: README.md  components.config
scripts/: build_base_image.sh  build_components.sh  build_components_main.sh  build_explorer.sh  gcp.mk  local.mk  post-build.sh  pre-build.sh  run_explorer.sh  run_integration_tests.sh  run_sample_pipeline.sh  tag_components.sh  tag_explorer.sh
tests/: __init__.py  example_component.yaml  test_caching.py  test_cli.py  test_compiler.py  test_component.py  test_component_specs.py  test_components_specs.py  test_data_io.py  test_dataset.py  test_explorer.py  test_filesystem.py  test_fondant_manifest.py  test_gcp_storage.py  test_import_utils.py  test_io.py  test_io_helpers.py  test_kfp_helpers.py  test_kfp_utils.py  test_logger.py  test_manifest.py  test_manifest_evolution.py  test_manifest_helpers.py  test_pandas_component.py  test_pipeline.py  test_runner.py  test_sample_pipeline.py  test_schema.py  test_utils.py
(+1284 files in other folders)
