[tool.poetry]
name = "express"
version = "0.1.dev0"
description = "Express - Composable pipelines for foundation model finetuning"
readme = "README.md"
keywords = ["data", "machine learning", "finetuning", "foundation models"]
license = "Apache-2.0"
authors = [
    "Simon Slangen <simon.slangen@ml6.eu>",
    "Philippe Moussalli <philippe.moussalli@ml6.eu>",
    "Robbe Sneyders <robbe.sneyders@ml6.eu>",
    "Georges Lorré <georges.lorré@ml6.eu>",
    "Niels Rogge <niels.rogge@ml6.eu>",
]
maintainers = [
    "Philippe Moussalli <philippe.moussalli@ml6.eu>",
    "Robbe Sneyders <robbe.sneyders@ml6.eu>",
    "Georges Lorré <georges.lorré@ml6.eu>",
    "Niels Rogge <niels.rogge@ml6.eu>",
]
repository = "https://github.com/ml6-team/express"
include = ["*.txt", "*.rst", "*.md"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
dataclasses-json = "^0.5.7"

datasets = { version = "^2.10.1", optional = true }
kfp = { version = "^1.8.19", optional = true }
kubernetes = { version = "^18.20.0", optional = true }
pandas = { version = "^1.3.5", optional = true }

[tool.poetry.extras]
datasets = ["datasets"]
pandas = ["pandas"]
pipelines = ["kfp", "kubernetes"]

[tool.poetry.group.test.dependencies]
liccheck = "^0.7.3"
pre-commit = "^3.1.1"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100  # Only for comments, as code is handled by black at length 88
