[metadata]
name = express_components
version = 0.0.1
author = ML6
description =  Common logic and components for Express Pipelines
keywords = express, kfp
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7.9

[options]
install_requires =
    dataclasses-json==0.5.7
    google-cloud-storage==1.44.0
    kfp==1.8.14
    pandas==1.3.5
    pyarrow==10.0.0
    torch==1.12.0

[bdist_wheel]
python-tag=py37
